--- a/style.css
+++ b/style.css
@@ -12,3 +12,50 @@ img, video{
 }
 
 figure{ margin:0;}
+
+/* --------------------------------
+responsive video
+-------------------------------- */
+
+.videoWrapper {
+	position: relative;
+	padding-top: 25px;
+	height: 0;
+  clear:both;
+}
+
+/* 16:9 aspect ratio wrapper */
+.videoWrapper.ratio-16-9{
+    padding-bottom: 56.25%; /* 9 ÷ 16 = .5625 which is 56.25% */
+}
+
+/* 4:3 aspect ratio wrapper */
+.videoWrapper.ratio-4-3{
+    padding-bottom: 75%; /* 3 ÷ 4 = .75 which is 75% */
+}
+
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
+
+
+
+
+/* ----------------------
+This just makes the text look nicer
+---------------------- */
+html{font-size:18px;}
+body{
+  font-family: -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  line-height: 1.5
+}
+p, li{ margin-bottom: 1rem;}
+.side-note{font-size:1.1rem; font-style: italic;max-width:90%;}
+pre{font-family: Menlo, Consolas, Monaco, "Courier New", monospace; padding:1rem;border: 1px solid #999999;}
+code{font-weight:600;}
